--- a/templates/taxi/driver_detail.html
+++ b/templates/taxi/driver_detail.html
@@ -14,13 +14,18 @@
     <h4>Cars</h4>
 
     {% for car in driver.cars.all %}
-        <hr>
-        <p><strong>Model:</strong> {{ car.model }}</p>
-        <p><strong>Manufacturer:</strong> {{ car.manufacturer.name }}</p>
-        <p class="text-muted"><strong>Id:</strong> {{car.id}}</p>
+      <hr>
+      <p><strong>Model:</strong> {{ car.model }}</p>
+      <p><strong>Manufacturer:</strong> {{ car.manufacturer.name }}</p>
+      <p class="text-muted"><strong>Id:</strong> {{ car.id }}</p>
 
     {% empty %}
       <p>No cars!</p>
     {% endfor %}
+  </div>
+
+  <div class="mt-3">
+    <a href="{% url 'taxi:driver-update' driver.id %}" class="btn btn-info">Update License</a>
+    <a href="{% url 'taxi:driver-delete' driver.id %}" class="btn btn-danger">Delete</a>
   </div>
 {% endblock %}
