--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -12,7 +12,21 @@
     </a>
   </h1>
   <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
-  <h1>Drivers</h1>
+  <div class="row align-items-center">
+    <div class="col-auto">
+      <h1>Drivers</h1>
+    </div>
+    <div class="col-auto">
+      <form method="post" action="{% url 'taxi:toggle-car-driver' car.pk %}">
+        {% csrf_token %}
+        {% if user in car.drivers.all %}
+          <button type="submit" class="btn btn-danger">Delete me from this car</button>
+        {% else %}
+          <button type="submit" class="btn btn-success">Assign me to this car</button>
+        {% endif %}
+      </form>
+    </div>
+  </div>
   <hr>
   <ul>
     {% for driver in car.drivers.all %}
