--- a/templates/taxi/driver_confirm_delete.html
+++ b/templates/taxi/driver_confirm_delete.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
 
     <input type="submit" value="Yes" class="btn btn-danger">
+    <a onclick="window.history.back()" class="btn btn-secondary">Cancel</a>
   </form>
 {% endblock %}
