--- a/templates/taxi/driver_form.html
+++ b/templates/taxi/driver_form.html
@@ -8,5 +8,6 @@
     {{ form|crispy }}
 
     <input type="submit" value="Submit" class="btn btn-primary">
+    <a onclick="window.history.back()" class="btn btn-secondary">Cancel</a>
   </form>
 {% endblock %}
